--- a/interface/package.json
+++ b/interface/package.json
@@ -26,7 +26,6 @@
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "@uniswap/default-token-list": "^1.3.1",
-    "@uniswap/sdk": "git+https://github.com/sarvagnakadiya/uniswap-clone/tree/main/v2-sdk",
     "@uniswap/token-lists": "^1.0.0-beta.15",
     "@uniswap/v2-core": "1.0.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
@@ -107,6 +106,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "caniuse-lite": "^1.0.30001591"
+    "caniuse-lite": "^1.0.30001591",
+    "sdk-clone-uniswap-0xdab": "^0.0.1"
   }
 }
